--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
-  "dependencies": {
-    "hh-mm-ss": "^1.2.0",
-    "uniqid": "^5.4.0"
+  "name": "waldo",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:macla7/waldo.git",
+  "author": "Mitch <MitchelClark1997@outlook.com>",
+  "license": "MIT",
+  "scripts": {
+    "build": "yarn --cwd client install && yarn --cwd client build",
+    "deploy": "cp -a client/build/. public/",
+    "heroku-postbuild": "yarn build && yarn deploy"
   }
 }
